# GanitLLM

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: index.html
docs/static/css/: index.css
src/: prompt.py
src/data_gen/: 0.filter.py  1.deduplication.py  2.minhash.py  3.decontamination.py  4.tag_difficulty.py  curriculum_shuffle.py  process_dataset.py  validate_dev_data.py
src/evaluation/: common.py  eval.py  eval_types.py  run_ckpts.py  vllm_utils.py
src/training/: sft_full.sh
src/training/unsloth/: grpo_lora.py  reward_functions.py
src/utils/: inference.py  merge.py
