[build-system]
requires = ["setuptools >= 77.0.3", "torch>=2.7.1"]
build-backend = "setuptools.build_meta"

[project]
name = "ganitllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bert-score>=0.3.13",
    "datasets>=4.0.0",
    "torch>=2.7.1",
    "flash-attn>=2.8.3",
    "flashinfer-python>=0.2.14.post1",
    "ipykernel>=6.30.1",
    "joblib>=1.5.2",
    "numpy>=2.2.6",
    "rapidfuzz>=3.14.0",
    "retry>=0.9.2",
    "tabulate>=0.9.0",
    "transformers>=4.55.4",
    "vllm>=0.10.1.1",
    "wandb>=0.21.3",
    "weave>=0.51.56",
    "jsonlines>=4.0.0",
    "orjson>=3.11.3",
    "py-spy>=0.4.1",
    "gpu-wait>=0.4.9",
]

[project.optional-dependencies]
train = [
    "addict>=2.4.0",
    "deepspeed>=0.17.5",
    "flashinfer-python>=0.3.1",
    "liger-kernel>=0.6.2",
    "ms-swift[all]>=1.4.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
